...
class GymDetailScreen extends ConsumerWidget {
  const GymDetailScreen({required this.slug, super.key});
  final String slug;
  @override
  Widget build(BuildContext context, WidgetRef ref) => Scaffold(
    appBar: AppBar(
      title: const Text('Gym details'),
      leading: BackButton(
        onPressed: () => context.canPop() ? context.pop() : context.go('/gyms'),
      ),
    ),
    body: ref
        .watch(gymDetailProvider(slug))
...
